add signin options

--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,24 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyDeI-xw6uluKoPRVzMNfGC1MQN5-7TPPUk",
+    authDomain: "froppa-e3a33.firebaseapp.com",
+    projectId: "froppa-e3a33",
+    storageBucket: "froppa-e3a33.appspot.com",
+    messagingSenderId: "1015299418714",
+    appId: "1:1015299418714:web:6bfd8acce902ef03c30663"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
   </body>
 </html>
